TDM-185 fix yearly notifications